# modrinthpy

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/: example_create_project.py  example_create_version.py  example_search.py
modrinthpy/: __init__.py  client.py  clients.py  decorators.py  exceptions.py  models.py  objects.py  utils.py
